# tsue

./: .gitignore  Cargo.toml
codegen/: Cargo.toml  huffman-code.rs  huffman-decode.rs  huffman-encode.rs
codegen/decode/: mod.rs  v2.rs
codegen/huffman/: mod.rs
codegen/tree/: mod.rs
docs/: abstraction.md
example/: Cargo.toml  h2.rs  index.html  main.rs  middleware.rs  param.rs  ws.html  ws.rs
example/src/: main.rs
examples/basic/: Cargo.toml
examples/basic-rc/: Cargo.toml
examples/basic-rc/src/: main.rs
examples/basic/src/: main.rs
examples/glomer/: Cargo.toml
examples/glomer/src/: main.rs
examples/mvc/: Cargo.toml
examples/mvc/src/: main.rs  routes.rs
examples/mvc/src/controllers/: tasks.rs
examples/mvc/src/models/: tasks.rs
migrations/: 20250213084744_create_post.down.sql  20250213084744_create_post.up.sql
src/: body.rs  io.rs  lib.rs  log.rs  matches.rs  request.rs  response.rs  rt.rs  server.rs  service.rs  task.rs  version.rs
src/body/: chunked.rs  coder.rs  collect.rs  decoder.rs  error.rs  frame.rs  full.rs  handle.rs  incoming.rs  mod.rs  shared.rs  stream.rs  writer.rs
src/body/handle/: shared.rs
src/common/: mod.rs
src/h1/: body.rs  chunked.rs  conn.rs  connection.rs  driver.rs  error.rs  io.rs  mod.rs  parser.rs  proto.rs  spec.rs  states.rs  test.rs
src/h1/io/: buffer.rs  shared.rs
src/h1/io_v2/: buffer.rs  mod.rs
src/h1/parser/: error.rs  header.rs  matches.rs  mod.rs  request.rs  simd.rs  target.rs  test.rs
src/h1/proto/: error.rs
src/h1/spec/: body.rs  chunked.rs  context.rs  error.rs  state.rs
src/h2/: conn.rs  error.rs  frame.rs  mod.rs  settings.rs  state.rs  stream.rs
src/h2/hpack/: decode_table.rs  decoder.rs  encode_table.rs  encoder.rs  error.rs  huffman.rs  mod.rs  repr.rs  table.rs  test.rs
src/headers/: entry.rs  error.rs  field.rs  iter.rs  map.rs  map2.rs  matches.rs  mod.rs  name.rs  test.rs  value.rs
src/http/: authority.rs  date.rs  error.rs  extensions.rs  head.rs  host.rs  method.rs  mod.rs  path.rs  request.rs  response.rs  scheme.rs  shared.rs  spec.rs  status.rs  target.rs  uri.rs  version.rs
src/http/spec/: body.rs  chunked.rs  context.rs  error.rs  state.rs
src/parser/: h1.rs  h1v2.rs  mod.rs  simd.rs
src/parser/h1/: error.rs  header.rs  message.rs  mod.rs  request.rs  simd.rs  test.rs
src/parser/uri/: authority.rs  error.rs  mod.rs  parser.rs  path.rs  scheme.rs  simd.rs  target.rs  test.rs  uri.rs
src/proto/: context.rs  control_data.rs  error.rs  mod.rs  shared.rs  state.rs
src/proto/h1/: driver.rs  io.rs  mod.rs  parser.rs
src/request/: parser.rs
src/response/: write.rs
src/uri/: authority.rs  error.rs  http.rs  impls.rs  matches.rs  mod.rs  parser.rs  path.rs  scheme.rs  simd.rs  test.rs  uri.rs
tsue/: Cargo.toml
tsue-macros/: Cargo.toml
tsue-macros/src/: from_request.rs  into_response.rs  lib.rs
tsue-rc/: Cargo.toml
tsue-rc/src/: body.rs  bytestr.rs  bytestring.rs  futures.rs  helpers.rs  http.rs  lib.rs  request.rs  response.rs  route.rs  router.rs  runtime.rs  service.rs  task.rs
tsue-rc/src/http/: into_response.rs  request.rs  response.rs  service.rs  status.rs
tsue-rc/src/request/: from_request.rs  parser.rs
tsue-rc/src/response/: into_response.rs  writer.rs
tsue-rc/src/route/: handler.rs
tsue-rc/src/service/: http.rs  servicefn.rs  tcp.rs
tsue/src/: body.rs  body_v2.rs  common.rs  extensions.rs  extractor.rs  future.rs  futures.rs  helper.rs  lib.rs  method.rs  path.rs  request.rs  response.rs  route.rs  router.rs  rt.rs  runtime.rs  service.rs  status.rs  util.rs  version.rs
tsue/src/body/: collect.rs  error.rs  limited.rs  repr.rs
tsue/src/body_v2/: collect.rs
tsue/src/common/: bytestr.rs  mod.rs
tsue/src/headers/: map.rs  name.rs  value.rs
tsue/src/helper/: either.rs  form.rs  html.rs  json.rs  macros.rs  params.rs  redirect.rs  state.rs  util.rs  ws.rs
tsue/src/helper/ws/: frame.rs
tsue/src/http/: method.rs  mod.rs  path.rs  status.rs
tsue/src/http/headers/: entry.rs  iter.rs  map.rs  mod.rs  name.rs  value.rs
tsue/src/request/: body.rs  from_request.rs  tuples.rs
tsue/src/response/: body.rs  into_response.rs
tsue/src/route/: handler.rs
tsue/src/router/: handler.rs
tsue/src/routing/: adapter.rs  branch.rs  extract.rs  fallback.rs  handler.rs  matcher.rs  middleware.rs  mod.rs  nest.rs  router.rs  state.rs  zip.rs
tsue/src/rt/: rt_tokio.rs
tsue/src/util/: futures.rs  response.rs  service.rs
vice/: Cargo.toml
vice-core/: Cargo.toml
vice-core/src/: body.rs  lib.rs  runtime.rs  service.rs
vice-core/src/service/: from_fn.rs
vice-macros/: Cargo.toml
vice-macros-core/: Cargo.toml
vice-macros-core/src/: lib.rs  sql.rs
vice-macros/src/: lib.rs
vice-rc/: Cargo.toml
vice-rc/src/: actor.rs  body.rs  bytestring.rs  http.rs  lib.rs  runtime.rs  service.rs  stream.rs
vice-rc/src/http/: debug.rs  from_request.rs  noop.rs  parse.rs  request.rs  response.rs  service.rs  status.rs
vice-rc/src/runtime/: legacy.rs
vice-rc/src/service/: http.rs
vice/src/: body.rs  error.rs  extractor.rs  http.rs  lib.rs  main.rs  orders.rs  router.rs  runtime.rs  service.rs  util.rs
vice/src/http/: from_request.rs  into_response.rs  into_response_v2.rs
vice/src/router/: handle.rs  handler.rs
vice/src/service/: connection.rs
vice/src/util/: futures.rs  response.rs  service.rs
visor/: Cargo.toml
visor/src/: lib.rs  main.rs
viton/: Cargo.toml
viton/src/: main.rs
