[package]
name = "tsue"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-core = { version = "0.3.31" }
tcio = { git = "https://github.com/ariaandika/tcio", features = ["tokio"] }
tokio = { version = "1.46.1", features = ["net", "sync", "rt"] }

# Optionals

log = { version = "0.4.26", optional = true }
itoa = "1.0.15"

[features]
log = ["dep:log"]

[workspace]
members = [".", "codegen", "example"]
