[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
env_logger = "0.11.8"
futures-util = "0.3.31"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tour = { version = "0.1.0" }
tsue = { version = "0.1.0", path = "../tsue", features = ["tokio","form","ws","log","macros"] }

[[bin]]
name = "example"
path = "main.rs"

[[example]]
name = "ws"
path = "ws.rs"

[[example]]
name = "param"
path = "param.rs"
