[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tcio = { git = "https://github.com/ariaandika/tcio", features = ["tokio"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tsue = { version = "0.1.0", path = ".." }

[[bin]]
name = "example"
path = "main.rs"

[[bin]]
name = "h2"
path = "h2.rs"
