[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "example"

[dependencies]
env_logger = "0.11.8"
tcio = { git = "https://github.com/ariaandika/tcio", features = ["tokio"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "time"] }
tsue = { version = "0.1.0", path = "..", features = ["log"] }

[[bin]]
name = "example"
path = "main.rs"

[[bin]]
name = "h2"
path = "h2.rs"
