[package]
name = "tsue"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures-util = { version = "0.3.31", default-features = false }
http = "1.2.0"
http-body = "1.0.1"
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = ["server", "http1"] }
log = { version = "0.4.26", optional = true }
pin-project-lite = "0.2.16"
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
tokio = { version = "1.43.0", features = ["net"], optional = true }

[features]
tokio = ["dep:tokio","hyper-util/tokio"]

http2 = ["hyper-util/http2"]

serde = ["dep:serde"]

json = ["dep:serde_json","serde"]
form = ["dep:serde_urlencoded","serde"]

log = ["dep:log"]
