[package]
name = "tsue"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
http = "1.2.0"
http-body = "1.0.1"
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = ["server", "http1"] }
pin-project-lite = "0.2.16"

# Optionals

base64ct = { version = "1.8.0", optional = true }
log = { version = "0.4.26", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
tokio = { version = "1.43.0", features = ["net"], optional = true }
tsue-macros = { version = "0.1.0", path = "../tsue-macros", optional = true }
futures-core = { version = "0.3.31", optional = true }
fnv = "1.0.7"
tcio = { version = "0.1.0", features = ["tokio"] }

[features]
default = ["tokio","serde","json"]

tokio = ["dep:tokio","hyper-util/tokio"]

http2 = ["hyper-util/http2"]
ws = ["dep:sha1","dep:base64ct","dep:futures-core","tokio"]

serde = ["dep:serde"]

json = ["dep:serde_json","serde"]
form = ["dep:serde_urlencoded","serde"]

log = ["dep:log"]
macros = ["dep:tsue-macros"]
