[package]
name = "vice"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.0"
futures-util = "0.3.31"
http = "1.2.0"
http-body = "1.0.1"
httparse = "1.10.0"
pin-project-lite = "0.2.16"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["io-util", "net", "rt-multi-thread", "sync"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
