[package]
name = "vice"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
bytes = "1.10.0"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.10", features = ["server", "tokio", "http1"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["io-util", "net", "rt-multi-thread"] }
tracing = "0.1.41"
