[package]
name = "visor"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
httparse = "1.10.0"
httpdate = "1.0.3"
itoa = "1.0.14"
tokio = { version = "1.43.0", features = ["io-util", "net", "sync", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
